# actix_web_mariadb_example

./: .env  Cargo.toml  README.md  test.rest
scripts/: create_db.sh  init.sql
src/: api.rs  main.rs
