[package]
name = "webserver_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono"] }

[package.metadata.scripts]
db_create = "bash ./scripts/create_db.sh"
db_start = "docker start sqlx"
db_stop = "docker stop sqlx"
db_remove = "docker rm sqlx"
db_logs = "docker logs sqlx"